--- a/app/src/main/res/layout/ayarlarbutton.xml
+++ b/app/src/main/res/layout/ayarlarbutton.xml
@@ -9,16 +9,17 @@
 
 <LinearLayout
     android:id="@+id/ayarlar"
-    android:layout_width="75dp"
+    android:layout_width="50dp"
     android:layout_gravity="center"
-    android:layout_height="75dp"
+    android:layout_height="50dp"
+    android:gravity="center"
     android:background="@drawable/rectangle6">
 
 
     <ImageView
 
         android:layout_width="wrap_content"
-        android:layout_height="84dp"
+        android:layout_height="50dp"
         android:layout_gravity="center"
         android:layout_weight="1"
         app:srcCompat="@drawable/ayarlar" />
