--- a/app/src/main/res/layout/activity_home_screen.xml
+++ b/app/src/main/res/layout/activity_home_screen.xml
@@ -21,18 +21,19 @@
 
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/tabLayout"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="13dp"
-        app:tabIndicatorColor="@color/colorStatusText"
-
+        android:layout_marginTop="10dp"
         android:background="@android:drawable/divider_horizontal_bright"
+
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:tabGravity="center"
+        app:tabIndicatorColor="@color/colorStatusText"
         app:tabIndicatorHeight="4dp"
-        app:tabMode="scrollable"
+        app:tabMaxWidth="0dp"
+        app:tabMode="fixed"
         app:tabRippleColor="@color/black">
 
     </com.google.android.material.tabs.TabLayout>
