--- a/app/src/main/res/layout/anasayfabutton.xml
+++ b/app/src/main/res/layout/anasayfabutton.xml
@@ -8,8 +8,9 @@
 
     <LinearLayout
         android:id="@+id/anasayfa"
-        android:layout_width="75dp"
-        android:layout_height="75dp"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+      android:layout_gravity="center"
         android:background="@drawable/rectangle">
 
 
@@ -17,7 +18,7 @@
             android:id="@+id/imageView6"
 
             android:layout_width="wrap_content"
-            android:layout_height="84dp"
+            android:layout_height="50dp"
             android:layout_gravity="center"
             android:layout_weight="1"
             app:srcCompat="@drawable/anasayfa" />
