--- a/app/src/main/res/layout/fragment_anasayfa.xml
+++ b/app/src/main/res/layout/fragment_anasayfa.xml
@@ -12,7 +12,7 @@
         android:id="@+id/textView42"
         android:layout_width="wrap_content"
         android:layout_height="36dp"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="30dp"
         android:fontFamily="@font/poppinsbold"
         android:text="AKÜ"
         android:textColor="@color/white"
@@ -25,7 +25,7 @@
         android:id="@+id/textView43"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="30dp"
         android:fontFamily="@font/poppinsbold"
         android:text="TEMİZ SU"
         android:textColor="@color/white"
@@ -39,7 +39,7 @@
         android:id="@+id/textView44"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="30dp"
         android:fontFamily="@font/poppinsmedium"
         android:text="27 MAYIS 2023"
         android:textColor="@color/white"
@@ -56,15 +56,15 @@
         android:gravity="center"
         android:text="22:38"
         android:textColor="@color/white"
-        android:textSize="120dp"
+        android:textSize="100dp"
         app:layout_constraintEnd_toStartOf="@+id/imageView44"
         app:layout_constraintStart_toEndOf="@+id/imageView32"
         app:layout_constraintTop_toBottomOf="@+id/textView44" />
 
     <ImageView
         android:id="@+id/imageView32"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="220dp"
+        android:layout_height="170dp"
         android:layout_marginStart="100dp"
         android:layout_marginTop="16dp"
         android:src="@drawable/akuicon"
@@ -72,19 +72,19 @@
         app:layout_constraintTop_toBottomOf="@+id/textView42" />
 
     <ImageView
-        android:id="@+id/imageView42"
+        android:id="@+id/akudolum"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:src="@drawable/akurectangleyesil50"
+        android:layout_marginBottom="16dp"
+        android:src="@drawable/emptyakuvector"
         app:layout_constraintBottom_toBottomOf="@+id/imageView32"
         app:layout_constraintEnd_toEndOf="@+id/imageView32"
         app:layout_constraintStart_toStartOf="@+id/imageView32" />
 
     <ImageView
         android:id="@+id/imageView44"
-        android:layout_width="wrap_content"
-        android:layout_height="160dp"
+        android:layout_width="220dp"
+        android:layout_height="170dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="100dp"
         android:src="@drawable/akuicon"
@@ -107,7 +107,7 @@
         android:id="@+id/textView47"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="65dp"
+        android:layout_marginTop="20dp"
         android:fontFamily="@font/poppinsbold"
         android:text="AKÜ GERİLİMİ"
         android:textColor="@color/white"
@@ -120,7 +120,7 @@
         android:id="@+id/textView48"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="65dp"
+        android:layout_marginTop="20dp"
         android:fontFamily="@font/poppinsbold"
         android:text="ATIK SU"
         android:textColor="@color/white"
@@ -143,7 +143,7 @@
         android:id="@+id/textView49"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="20dp"
         android:layout_marginEnd="8dp"
         android:fontFamily="@font/poppinsbold"
         android:gravity="center|end"
@@ -158,7 +158,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="20dp"
         android:fontFamily="@font/poppinsbold"
         android:gravity="center|start"
         android:text="DIŞ SICAKLIK"
@@ -170,7 +170,7 @@
     <ImageView
         android:id="@+id/imageView46"
         android:layout_width="448dp"
-        android:layout_height="120dp"
+        android:layout_height="100dp"
         android:src="@drawable/huntercunter"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -178,11 +178,13 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <ImageView
-        android:id="@+id/imageView47"
+        android:id="@+id/temizsudolum"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:src="@drawable/temizsumavirectangle50"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="16dp"
+        android:src="@drawable/emptytemizsuvector"
         app:layout_constraintBottom_toBottomOf="@+id/imageView44"
         app:layout_constraintEnd_toEndOf="@+id/imageView44"
         app:layout_constraintStart_toStartOf="@+id/imageView44" />
@@ -270,14 +272,16 @@
     </LinearLayout>
 
     <TextView
+        android:id="@+id/textView32"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="68dp"
+        android:layout_marginStart="72dp"
+        android:layout_marginTop="56dp"
         android:fontFamily="@font/poppinsextralight"
         android:text="63"
         android:textColor="@color/white"
         android:textSize="54sp"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView42"
+
         app:layout_constraintStart_toStartOf="@+id/imageView32"
         app:layout_constraintTop_toBottomOf="@+id/textView42"
         app:layout_constraintVertical_bias="0.739" />
@@ -294,7 +298,7 @@
         app:layout_constraintBottom_toBottomOf="@+id/imageView32"
         app:layout_constraintEnd_toEndOf="@+id/imageView32"
         app:layout_constraintTop_toBottomOf="@+id/textView42"
-        app:layout_constraintVertical_bias="0.666" />
+        app:layout_constraintVertical_bias="0.565" />
 
     <TextView
         android:id="@+id/textView67"
