--- a/app/src/main/res/layout/fragment_denge_sistemi.xml
+++ b/app/src/main/res/layout/fragment_denge_sistemi.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -8,17 +9,17 @@
 
     <ImageView
         android:id="@+id/imageView15"
-        android:layout_width="wrap_content"
+        android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="84dp"
-        android:layout_marginTop="55dp"
+        android:layout_marginTop="15dp"
         android:src="@drawable/gostergeler"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/imageView23"
-        android:layout_width="wrap_content"
+        android:layout_width="250dp"
         android:layout_height="235dp"
         android:src="@drawable/gostergeler2"
         app:layout_constraintBottom_toBottomOf="@+id/imageView15"
@@ -29,9 +30,9 @@
 
     <ImageView
         android:id="@+id/imageView24"
-        android:layout_width="wrap_content"
+        android:layout_width="250dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="55dp"
+        android:layout_marginTop="15dp"
         android:src="@drawable/gostergeler"
         app:layout_constraintEnd_toEndOf="@+id/imageView25"
         app:layout_constraintHorizontal_bias="0.636"
@@ -40,7 +41,7 @@
 
     <ImageView
         android:id="@+id/imageView25"
-        android:layout_width="wrap_content"
+        android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="80dp"
         android:src="@drawable/gostergeler3"
@@ -110,7 +111,7 @@
         android:id="@+id/linearLayout8"
         android:layout_width="wrap_content"
         android:layout_height="60dp"
-        android:layout_marginTop="66dp"
+        android:layout_marginTop="36dp"
         android:background="@drawable/kompresorrectangle"
         android:orientation="horizontal"
         app:layout_constraintEnd_toStartOf="@+id/imageView25"
@@ -144,7 +145,7 @@
     <ImageView
         android:id="@+id/imageView14"
         android:layout_width="448dp"
-        android:layout_height="120dp"
+        android:layout_height="100dp"
         android:src="@drawable/huntercunter"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -154,7 +155,7 @@
         android:id="@+id/textView69"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="64dp"
+        android:layout_marginTop="34dp"
         android:fontFamily="@font/poppinsblack"
         android:gravity="center"
         android:text="SAĞ"
@@ -169,7 +170,7 @@
         android:id="@+id/textView70"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="64dp"
+        android:layout_marginTop="34dp"
         android:fontFamily="@font/poppinsblack"
         android:text="SOL"
         android:textColor="#FDFDFD"
