--- a/app/src/main/res/layout/kapatmabutton.xml
+++ b/app/src/main/res/layout/kapatmabutton.xml
@@ -5,12 +5,13 @@
 xmlns:android="http://schemas.android.com/apk/res/android"
 android:layout_width="wrap_content"
 android:layout_height="wrap_content"
+    android:layout_gravity="center"
 android:orientation="vertical">
 
 <LinearLayout
     android:id="@+id/kapatma"
-    android:layout_width="75dp"
-    android:layout_height="75dp"
+    android:layout_width="50dp"
+    android:layout_height="50dp"
     android:background="@drawable/kapatmatus"
     android:orientation="horizontal">
 
