--- a/app/src/main/res/layout/kontrollerbutton.xml
+++ b/app/src/main/res/layout/kontrollerbutton.xml
@@ -9,15 +9,16 @@
 
 <LinearLayout
     android:id="@+id/kontroller"
-    android:layout_width="75dp"
-    android:layout_height="75dp"
+    android:layout_width="50dp"
+    android:layout_height="50dp"
+    android:layout_gravity="center"
     android:background="@drawable/rectangle4">
 
 
     <ImageView
 
         android:layout_width="wrap_content"
-        android:layout_height="84dp"
+        android:layout_height="50dp"
         android:layout_gravity="center"
         android:layout_weight="1"
         app:srcCompat="@drawable/kontroller" />
