--- a/app/src/main/res/layout/fragment_anasayfa.xml
+++ b/app/src/main/res/layout/fragment_anasayfa.xml
@@ -36,7 +36,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-<<<<<<< .merge_file_AYlMpq
+
         android:id="@+id/textView44"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -45,23 +45,10 @@
         android:text="27 MAYIS 2023"
         android:textColor="@color/white"
         android:textSize="24sp"
-        app:layout_constraintEnd_toEndOf="@+id/textView45"
-        app:layout_constraintStart_toStartOf="@+id/textView45"
+        app:layout_constraintStart_toStartOf="@+id/ay"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView45"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/poppinsthin"
-        android:gravity="center"
-        android:text="22:38"
-        android:textColor="@color/white"
-        android:textSize="100dp"
-        app:layout_constraintEnd_toStartOf="@+id/imageView44"
-        app:layout_constraintStart_toEndOf="@+id/imageView32"
-        app:layout_constraintTop_toBottomOf="@+id/textView44" />
-=======
         android:id="@+id/gun"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -86,7 +73,7 @@
         android:textSize="100dp"
         app:layout_constraintEnd_toStartOf="@+id/textView34"
         app:layout_constraintTop_toBottomOf="@+id/gun" />
->>>>>>> .merge_file_NY6uvv
+
 
     <ImageView
         android:id="@+id/imageView32"
@@ -126,15 +113,9 @@
         android:text="CUMARTESİ"
         android:textColor="@color/white"
         android:textSize="16sp"
-<<<<<<< .merge_file_AYlMpq
-        app:layout_constraintEnd_toEndOf="@+id/textView45"
-        app:layout_constraintStart_toStartOf="@+id/textView45"
-        app:layout_constraintTop_toBottomOf="@+id/textView45" />
-=======
         app:layout_constraintEnd_toEndOf="@+id/dk"
         app:layout_constraintStart_toStartOf="@+id/saat"
         app:layout_constraintTop_toBottomOf="@+id/saat" />
->>>>>>> .merge_file_NY6uvv
 
     <TextView
         android:id="@+id/textView47"
@@ -414,8 +395,7 @@
             android:textSize="34sp" />
     </LinearLayout>
 
-<<<<<<< .merge_file_AYlMpq
-=======
+
     <TextView
         android:id="@+id/textView34"
         android:layout_width="11dp"
@@ -470,6 +450,4 @@
         android:textSize="24sp"
         app:layout_constraintStart_toEndOf="@+id/ay"
         app:layout_constraintTop_toTopOf="parent" />
-
->>>>>>> .merge_file_NY6uvv
 </androidx.constraintlayout.widget.ConstraintLayout>
